# AdventOfCode

./: .gitignore  Cargo.toml  README.md
.github/badges/: completion2019.json  completion2020.json  completion2021.json  completion2022.json  completion2023.json  completion2024.json  completion2025.json
.github/workflows/: build.yml  coverage.yml  security_audit.yml
2019/day01/: Cargo.toml
2019/day01/src/: lib.rs  main.rs
2019/day02/: Cargo.toml
2019/day02/src/: lib.rs  main.rs
2019/day03/: Cargo.toml
2019/day03/src/: lib.rs  main.rs
2019/day04/: Cargo.toml
2019/day04/src/: lib.rs  main.rs
2019/day05/: Cargo.toml
2019/day05/src/: lib.rs  main.rs
2019/day06/: Cargo.toml
2019/day06/src/: lib.rs  main.rs
2019/day07/: Cargo.toml
2019/day07/src/: intcode_machine.rs  lib.rs  main.rs  utils.rs
2019/day08/: Cargo.toml
2019/day08/src/: lib.rs  main.rs
2019/day09/: Cargo.toml
2019/day09/src/: intcode_machine.rs  lib.rs  main.rs  utils.rs
2020/day01/: Cargo.toml
2020/day01/src/: lib.rs  main.rs
2020/day02/: Cargo.toml
2020/day02/src/: lib.rs  main.rs
2020/day03/: Cargo.toml
2020/day03/src/: lib.rs  main.rs
2020/day04/: Cargo.toml
2020/day04/src/: lib.rs  main.rs
2020/day05/: Cargo.toml
2020/day05/src/: lib.rs  main.rs
2020/day06/: Cargo.toml
2020/day06/src/: lib.rs  main.rs
2020/day07/: Cargo.toml
2020/day07/src/: lib.rs  main.rs
2020/day08/: Cargo.toml
2020/day08/src/: lib.rs  main.rs
2020/day09/: Cargo.toml
2020/day09/src/: lib.rs  main.rs
2020/day10/: Cargo.toml
2020/day10/src/: lib.rs  main.rs
2020/day11/: Cargo.toml
2020/day11/src/: lib.rs  main.rs
2020/day12/: Cargo.toml
2020/day12/src/: lib.rs  main.rs
2020/day13/: Cargo.toml
2020/day13/src/: lib.rs  main.rs
2020/day14/: Cargo.toml
2020/day14/src/: lib.rs  main.rs
2020/day15/: Cargo.toml
2020/day15/src/: lib.rs  main.rs
2020/day16/: Cargo.toml
2020/day16/src/: lib.rs  main.rs
2020/day17/: Cargo.toml
2020/day17/src/: lib.rs  main.rs
2020/day18/: Cargo.toml
2020/day18/src/: lib.rs  main.rs
2020/day19/: Cargo.toml
2020/day19/src/: lib.rs  main.rs
2020/day20/: Cargo.toml
2020/day20/src/: lib.rs  main.rs
2020/day21/: Cargo.toml
2020/day21/src/: lib.rs  main.rs
2020/day22/: Cargo.toml
2020/day22/src/: lib.rs  main.rs
2020/day23/: Cargo.toml
2020/day23/src/: lib.rs  main.rs
2020/day24/: Cargo.toml
2020/day24/src/: lib.rs  main.rs
2020/day25/: Cargo.toml
2020/day25/src/: lib.rs  main.rs
2021/day01/: Cargo.toml
2021/day01/src/: lib.rs  main.rs
2021/day02/: Cargo.toml
2021/day02/src/: lib.rs  main.rs
2021/day03/: Cargo.toml
2021/day03/src/: lib.rs  main.rs
2021/day04/: Cargo.toml
2021/day04/src/: lib.rs  main.rs
2021/day05/: Cargo.toml
2021/day05/src/: lib.rs  main.rs
2021/day06/: Cargo.toml
2021/day06/src/: lib.rs  main.rs
2021/day07/: Cargo.toml
2021/day07/src/: lib.rs  main.rs
2021/day08/: Cargo.toml
2021/day08/src/: lib.rs  main.rs
2021/day09/: Cargo.toml
2021/day09/src/: lib.rs  main.rs
2021/day10/: Cargo.toml
2021/day10/src/: lib.rs  main.rs
2021/day11/: Cargo.toml
2021/day11/src/: lib.rs  main.rs
2021/day12/: Cargo.toml
2021/day12/src/: lib.rs  main.rs
2021/day13/: Cargo.toml
2021/day13/src/: lib.rs  main.rs
2021/day14/: Cargo.toml
2021/day14/src/: lib.rs  main.rs
2021/day15/: Cargo.toml
2021/day15/src/: lib.rs  main.rs
2021/day16/: Cargo.toml
2021/day16/src/: lib.rs  main.rs
2021/day17/: Cargo.toml
2021/day17/src/: lib.rs  main.rs
2021/day18/: Cargo.toml
2021/day18/src/: lib.rs  main.rs
2021/day19/: Cargo.toml
2021/day19/src/: lib.rs  main.rs
2021/day20/: Cargo.toml
2021/day20/src/: lib.rs  main.rs
2021/day21/: Cargo.toml
2021/day21/src/: lib.rs  main.rs
2021/day22/: Cargo.toml
2021/day22/src/: intersection.rs  lib.rs  main.rs
2021/day24/: Cargo.toml
2021/day24/src/: chunk.rs  lib.rs  main.rs
2022/day01/: Cargo.toml
2022/day01/benches/: benchmarks.rs
2022/day01/src/: lib.rs  main.rs  solution.rs  types.rs
2022/day02/: Cargo.toml
2022/day02/benches/: benchmarks.rs
2022/day02/src/: lib.rs  main.rs  solution.rs  types.rs
2022/day03/: Cargo.toml
2022/day03/src/: lib.rs  (+3 more)
2022/day04/: Cargo.toml
2022/day04/benches/: benchmarks.rs
2022/day04/src/: lib.rs  main.rs  solution.rs  types.rs
2022/day05/: Cargo.toml
2022/day06/: Cargo.toml
2022/day07/: Cargo.toml
2022/day08/: Cargo.toml
2022/day10/: Cargo.toml
2022/day11/: Cargo.toml
2022/day11/benches/: benchmarks.rs
2022/day11/src/: lib.rs  main.rs  solution.rs  types.rs
2022/day15/: Cargo.toml
2023/day01/: Cargo.toml
2023/day02/: Cargo.toml
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day05/benches/: benchmarks.rs
2023/day05/src/: lib.rs  main.rs  types.rs
2024/day01/: Cargo.toml
2024/day01/benches/: benchmarks.rs
2024/day01/src/: common.rs  lib.rs  main.rs
2024/day02/: Cargo.toml
2024/day02/benches/: benchmarks.rs
2024/day02/src/: common.rs  lib.rs  main.rs
2024/day03/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day10/: Cargo.toml
2024/day11/: Cargo.toml
2025/day01/: Cargo.toml
2025/day02/: Cargo.toml
2025/day03/: Cargo.toml
2025/day04/: Cargo.toml
aoc-solution/: Cargo.toml
aoc-solution-derive/: Cargo.toml
aoc-solution-derive/src/: aoc.rs  lib.rs
aoc-solution/src/: lib.rs  parser.rs
common/: Cargo.toml
common/src/: benchmark.rs  constants.rs  execution.rs  helpers.rs  input_read.rs  legacy.rs  lib.rs  parsing.rs  types.rs
solution-runner/: Cargo.toml
solution-runner/src/: main.rs
tools/aoc-init/: Cargo.toml
tools/aoc-init/src/: main.rs
tools/aoc-init/template/: cargo-generate.toml  pre-script.rhai
tools/aoc-init/template/{{year}}/day{{day}}/: Cargo.toml
tools/aoc-init/template/{{year}}/day{{day}}/benches/: benchmarks.rs
tools/aoc-init/template/{{year}}/day{{day}}/src/: common.rs  lib.rs  main.rs  types.rs
(+104 files in other folders)
