[workspace]
resolver = "2"

members = [
    "aoc-solution",
    "aoc-solution-derive",
    "solution-runner",
    "common",
    "tools/aoc-init",
    "2022/day01",
    "2022/day02",
    "2022/day03",
    "2022/day04",
    "2022/day05",
    "2022/day06",
    "2022/day07",
    "2022/day08",
    "2022/day11",
    "2022/day10"
]

[workspace.dependencies]
clap = "4"
anyhow = "1.0.75"
