[workspace]
resolver = "2"

members = [
    "aoc-solution",
    "aoc-solution-derive",
    "solution-runner",
    "common",
    "tools/aoc-init",
    "2022/day01",
    "2022/day02",
    "2022/day03",
    "2022/day04",
    "2022/day05",
    "2022/day06",
    "2022/day07",
    "2022/day08",
    "2022/day11",
    "2022/day10",
    "2023/day01",
    "2023/day02",
    "2023/day03",
    "2023/day04",
    "2023/day05",
    "2024/day01",
    "2024/day02"
]

[workspace.dependencies]
anyhow = "1.0.93"
cargo-edit = "0.13.0"
cargo-generate = "0.22.0"
cfg-if = "1.0.0"
clap = "4.5.21"
criterion = "0.5.1"
futures = "0.3.31"
humantime = "2.1.0"
itertools = "0.13.0"
num = "0.4.3"
nom = "7.1.3"
rayon = "1.10.0"
reqwest = "0.12.9"
tokio = "1.41.1"

# we need a version that is compatible with cargo-edit
toml_edit = "0.19.15"

# derive macro
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.92"
syn = "2.0.90"
quote = "1.0.37"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"
