[package]
name = "aoc-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
#syn = "2.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.67"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
