[package]
name = "aoc-derive"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
quote = { workspace = true }
