[package]
name = "solution-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }

aoc-solution = { path = "../aoc-solution" }
common = { path = "../common" }

day01_2022 = { path = "../2022/day01" }
day02_2022 = { path = "../2022/day02" }
day03_2022 = { path = "../2022/day03" }
day04_2022 = { path = "../2022/day04" }
day05_2022 = { path = "../2022/day05" }
day06_2022 = { path = "../2022/day06" }
day07_2022 = { path = "../2022/day07" }
day08_2022 = { path = "../2022/day08" }
day11_2022 = { path = "../2022/day11" }
day10_2022 = { path = "../2022/day10" }
