[package]
name = "day16_2021"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day16_2021"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aoc-solution = { path = "../../aoc-solution" }
aoc-common = { path = "../../common" }
hex = { workspace = true }
bitvec = { workspace = true }

[lints]
workspace = true