[package]
name = "day01_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day01_2022"
path = "src/lib.rs"

[dependencies]
common = { path =  "../../common" }
aoc-solution = { path = "../../aoc-solution" }
anyhow = { workspace = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmarks"
harness = false