[package]
name = "day02_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day02_2022"
path = "src/lib.rs"

[dependencies]
aoc-solution = { path = "../../aoc-solution" }
common = { path = "../../common" }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true