[package]
name = "aoc-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
cargo-edit = "0.12"
toml_edit = "0.19"
clap = { workspace = true, features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }

cargo-generate = "0.18.4"
